<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/black">

    <TextView
            android:id="@+id/singInBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:textSize="@dimen/text_size_20sp"
            android:text="@string/login_sing_in_btn"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/divider"
            style="@style/AppTextStyle"/>

    <TextView
            android:id="@+id/singUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:text="@string/login_sing_up_btn"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/divider"
            style="@style/AppTextStyle"
    />

    <TextView
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:textSize="@dimen/text_size_20sp"
            android:text="|"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/AppTextStyle"
    />

    <EditText
            android:id="@+id/loginEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:hint="@string/login_username_hint"
            android:textColorHint="@color/white_opacity_30"
            android:backgroundTint="@color/white_opacity_60"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintBottom_toTopOf="@id/passwordEt"
            style="@style/AppTextStyle"
    />

    <EditText
            android:id="@+id/passwordEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:hint="@string/login_password_hint"
            android:textColorHint="@color/white_opacity_30"
            android:backgroundTint="@color/white_opacity_60"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/confirmPasswordEt"
            app:layout_constraintTop_toBottomOf="@id/loginEt"
            style="@style/AppTextStyle"
    />

    <EditText
            android:id="@+id/confirmPasswordEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:hint="@string/login_confirm_password"
            android:textColorHint="@color/white_opacity_30"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/completeBtn"
            app:layout_constraintTop_toBottomOf="@id/passwordEt"
            style="@style/AppTextStyle"
    />

    <Button
            android:id="@+id/completeBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_32dp"
            android:layout_marginEnd="@dimen/margin_32dp"
            android:text="@string/login_login_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/ConfirmButton"
    />

</androidx.constraintlayout.widget.ConstraintLayout>